# ElectronWaveEvolution

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot.py  plot_lin.py  plot_log.py  run.sh  test_data_loader.cpp  test_data_loader.hpp  test_pmpp_final.cpp  waveform_evolution.cu  waveform_evolution_cpu.cpp
include/: helpers.hpp  waveform_evolution.hpp  waveform_evolution_cpu.hpp
src/: main.cpp  waveEvol.cu  waveEvol.h
